--- a/styles.css
+++ b/styles.css
@@ -67,5 +67,10 @@ color: var(--oscuro);
 
 
 
+.hero{
+    background-image: url(/img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 
+}
  
