--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,14 @@
 }
 
 html{
-    font-size: 62.5%;}
+    font-size: 62.5%;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
+    
 
 body {
     font-size:  16px ; /* 1 rem = 10 px */
@@ -34,13 +41,13 @@ body {
 
 .navegacion_principal{
     /* padding: 1rem; */
-    display: flex;
+    display: flex; 
     flex-direction: column;
     
 
 }
 
-@media (min-widht: 480px) {
+@media (min-width: 768px) {
     .navegacion_principal{
         flex-direction: row;
         justify-content: space-between;
@@ -48,16 +55,15 @@ body {
 }
 
 .navegacion_principal a{
-    font-size: 2rem;
+    display: block;
+    text-align: center;
     color: var(--blanco);
+    font-size: 2rem;
     text-decoration: none;
     font-weight: bold ;
     padding: 1rem;
-    text-align: center;
-    display: block;
+    
 }
-
-
 
 .navegacion_principal a:hover{
 background-color: var(--primario);
@@ -66,11 +72,9 @@ color: var(--oscuro);
 }
 
 
-
 .hero{
     background-image: url(/img/hero.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-
 }
  
