--- a/styles.css
+++ b/styles.css
@@ -22,19 +22,61 @@ html{
 body {
     font-size:  16px ; /* 1 rem = 10 px */
     font-family: 'Krub', sans-serif;
+    background-image: linear-gradient(to top, #dfe9f3 0%, var(--blanco) 100%);
 }
 
-.titulo{
-        text-align: center;
-        font-size: var(--fuente_principal);
-        color: var(--oscuro )
+h1{
+    font-size: 3.8rem;
 }
+
+h2{
+    font-size: 2.8rem;
+}
+
+h3{
+    font-size: 1.8rem;
+}
+
+h1,h2,h3{
+    text-align: center;
+}
+
 
 .contenedor{
-        max-width: 120rem;
-        margin: 0 10;
+    max-width: 120rem;
+    margin: 0 auto;
+    margin-bottom: 5rem;
 }
 
+.boton{
+    color:var(--blanco);
+    background-color: var(--secundario);
+    padding: 1rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    border-radius: 0.5rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 80%;
+    text-align: center;
+}
+
+@media (min-width: 768) {
+    .boton{
+        width: auto;
+    }
+}
+
+.sombra{
+            -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+            -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+            box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+            background-color: var(--blanco);
+            padding: 1rem;
+            border-radius: 1rem;
+
+}
 .nav_bg{
     background-color: var(--secundario);
 }
@@ -76,5 +118,39 @@ color: var(--oscuro);
     background-image: url(/img/hero.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 450px;
+    /* padding: 20px;   */
+    position: relative;
+    margin-bottom: 3rem;
 }
- 
+
+.contenido-hero{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 70%);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contenido-hero h2,
+.contenido-hero p{
+    color: var(--blanco);
+
+}
+
+.ubicacion{
+    display: flex;
+    align-items: flex-start;
+}
+
+@media (min-width: 768px) {
+    .servicios{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }    
+}
+
