--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,12 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-snap-type: mandatory;
+}
+
+.servicios,.navegacion_principal.formulario{
+    scroll-snap-align:center;
+    scroll-snap-stop: always;
 }
 
 *, *:before, *:after {
@@ -151,6 +157,95 @@ color: var(--oscuro);
     .servicios{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        column-gap: 10rem;
     }    
 }
 
+.servicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.servicio h3{
+    color: var(--secundario);
+    font-weight: normal;
+}
+.servicio p{
+    line-height: 2;
+    text-align: center ;
+}
+
+.servicio .iconos{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.formulario{
+    background-color: grey;
+    width: min(60rem , 100%);
+    margin: 0 auto;
+    padding:2rem;
+    border-radius: 2rem;
+    margin-bottom: 1rem;
+   
+}
+
+.formulario fieldset{
+    border: none;
+}
+
+.formulario legend{
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--primario);
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+ 
+.contenedor-campos{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: auto auto 20rem;
+}   
+.campo:nth-child(5){
+    grid-column:1/3 ;
+}
+
+}
+.campo{
+    margin-bottom: 1rem;
+}
+.campo label{
+    color:var(--blanco);
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    display:block;
+    border-radius: 0.5rem;
+    padding: 0.2rem;
+}
+.campo input,textarea{
+    width: 95%;
+    
+}
+.campo textarea{
+    height: 10rem;
+    margin-bottom: auto;
+}
+.enviar{
+    margin-top: auto;
+    width: 100%;
+}
+.boton:hover{
+    cursor: pointer;
+}
+
+.footer{
+    text-align: center;
+}
